src/constraints/denyall/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenyall
spec:
  crd:
    spec:
      names:
        kind: K8sDenyAll
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            high_severity:
              type: integer
            medium_severity:
              type: integer
            low_severity:
              type: integer
            
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyall

        violation[{"msg": msg}] {
          m := input.review.object.metadata.annotations["azure-denfder.io/scanInfo"]
          scan_info := json.unmarshal(m)[_]

          image := scan_info.image
          status := scan_info.status
          severity := scan_info.severity
          
          msg := sprintf("\nImage: %v\nStatus: %v\nSeverity: %v\nMedium: %v\n", [image,status,severity,input.parameters.medium_severity])
        }
